Preview antes de subir

--- a/JC_1_5/Pages/PanoPropuestas.xaml
+++ b/JC_1_5/Pages/PanoPropuestas.xaml
@@ -27,7 +27,6 @@
             <Grid>
                 <TextBlock Name="txtTituloWebView" Text="Titulo"></TextBlock>
                 <phone:WebBrowser Name="browContenido" Loaded="browContenido_Loaded"></phone:WebBrowser>
-
             </Grid>
             
         </phone:PanoramaItem>
@@ -68,15 +67,54 @@
                     <TextBlock Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="1" Name="txtVotados" Text="10 Personas"></TextBlock>
             </Grid>
 
-                <Grid Grid.Row="1">
+                <Grid Grid.Row="1" Grid.Column="2">
                     <TextBlock Name="txtPregunta" Text="¿Pregunta?"></TextBlock>
                     <ListBox Name="lstRespuestas" SelectionChanged="lstRespuestas_SelectionChanged">
-                    </ListBox>                
+                    </ListBox>
                 </Grid>
 
             </Grid>
         </phone:PanoramaItem>
+        
+        
         <phone:PanoramaItem Header="Argumenta">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="0.2*"></RowDefinition>
+                </Grid.RowDefinitions>
+            <ListBox Name="lstArgumenta" Grid.Row="0">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="60"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Image Grid.Column="0" Grid.Row="0" Width="50" Height="50" Source="{Binding from.urlFoto}" Margin="5,5,5,5"></Image>
+                            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding from.name}" Margin="5,5,5,5" FontFamily="/Assets/NattanFonts/Source_Sans_Pro/SourceSansPro-Black.ttf #Source Sans Pro"></TextBlock>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding message}" Margin="5,5,5,5" FontFamily="/Assets/NattanFonts/Source_Sans_Pro/SourceSansPro-Regular.ttf #Source Sans Pro"></TextBlock>
+                        </Grid>
+
+                    </DataTemplate>
+
+                </ListBox.ItemTemplate>
+                
+            </ListBox>
+                
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBox Name="txtArgumento" Grid.Column="0"></TextBox>
+                    <Button Name="btnEnviar" Content="Enviar" Background="#4A8293" BorderBrush="#4A8293" Foreground="White" FontFamily="/Assets/NattanFonts/Roboto_Slab/RobotoSlab-Light.ttf #Roboto Slab" Click="btnEnviar_Click" ></Button>
+                </Grid>
+            </Grid>
 
         </phone:PanoramaItem>
     </phone:Panorama>
